remove guava from test dependencies